completed about. fixed banners. fixed alignment of header

--- a/app/styles/myStyle.css
+++ b/app/styles/myStyle.css
@@ -211,6 +211,7 @@ a {
   padding: 20px 20px 20px 88px;
   font-size: 1.2em;
   color:black;
+  min-height: 114px;
   background-color: #f3f3f3;
 }
 
@@ -238,15 +239,15 @@ a {
 }
 
 .carousel-item {
-    height: 400px;
-    border: 4px solid black;
+  height: 400px;
+  border: 2px solid #333;
 }
 
 .mobile-img {
-  border: 1px solid black;
+  border: 1px solid #333;
   position: absolute;
   overflow: hidden;
-  height: 433px;
+  height: 433px !important;
   right: 0;
   top: 30%;
 }
@@ -394,7 +395,7 @@ header {
   max-width: 760px;
   width: 100%;
   /*margin: 0 auto;*/
-  padding: 20px 20px;
+   padding: 60px 20px;
   text-align: left;
   display: table;
 }
@@ -448,7 +449,7 @@ header {
     height: 640px;
   }
   .mobile-img {
-    border: 4px solid black;
+    border: 1px solid #333;
     position: absolute;
     overflow: hidden;
     /*height: 100%;*/
@@ -465,10 +466,10 @@ header {
     height: 400px;
   }
   .mobile-img {
-    border: 4px solid black;
+    border: 1px solid #333;
     position: absolute;
     overflow: hidden;
-    height: 67%;
+    height: 67% !important;
     right: 0;
     top: 27%;
   }
@@ -476,6 +477,13 @@ header {
     top: 11px;
     font-size: 1.8em !important;
   } 
+  .footerxl {
+    padding: 20px 20px 20px 88px;
+    font-size: 1.2em;
+    color:black;
+    min-height: 184px;
+    background-color: #f3f3f3;
+  }
 }
 @media only screen and (min-width: 481px) {
   div .half {
@@ -574,6 +582,11 @@ a {
   margin-top: -12px;
 }
 
+.about.button {
+  float:left;
+  margin: -11px auto;
+}
+
 .button .fa {
   position: absolute;
   right: 14%;
@@ -581,7 +594,12 @@ a {
   font-size: 1.4em;
 }
 
-
+.button .fa.fa-heart {
+  position: absolute;
+  right: 7%;
+  top: 32%;
+  font-size: 1.2em;
+}
 .three-up>* {
   display: inline-block;
   zoom: 1;
@@ -1153,7 +1171,7 @@ html,body {
 
 body {
   background: white;
-  color: #222222;
+  color: #333;
   padding: 0;
   margin: 0;
   font-family: "Lato",sans-serif;
@@ -5299,7 +5317,7 @@ label.error {
 .keystroke,kbd {
   background-color: #ededed;
   border-color: #dddddd;
-  color: #222222;
+  color: #333;
   border-style: solid;
   border-width: 1px;
   margin: 0;
@@ -5713,7 +5731,7 @@ ul.pagination {
 
 ul.pagination li {
   height: 1.5rem;
-  color: #222222;
+  color: #333;
   font-size: 0.875rem;
   margin-left: 0.3125rem;
 }
@@ -6606,44 +6624,44 @@ dialog[open] {
 table {
   background: white;
   margin-bottom: 1.25rem;
-  border: solid 1px #dddddd;
+ /* border: solid 1px #dddddd;*/
   table-layout: fixed;
   width: 100%;
 }
 
 table caption {
-  background: transparent;
-  color: #222222;
-  font-size: 1rem;
+  /*background: transparent;*/
+  color: #333;
+  /*font-size: 1rem;*/
   font-weight: bold;
 }
 
 table thead {
-  background: whitesmoke;
+  /*background: whitesmoke;*/
 }
 
 table thead tr th,table thead tr td {
   padding: 0.5rem 0.625rem 0.625rem;
-  font-size: 0.875rem;
+  /*font-size: 0.875rem;*/
   font-weight: bold;
-  color: #222222;
+  color: #333;
 }
 
 table tfoot {
-  background: whitesmoke;
+  /*background: whitesmoke;*/
 }
 
 table tfoot tr th,table tfoot tr td {
   padding: 0.5rem 0.625rem 0.625rem;
-  font-size: 0.875rem;
+  /*font-size: 0.875rem;*/
   font-weight: bold;
-  color: #222222;
+  color: #333;
 }
 
 table tr th,table tr td {
   padding: 0.5625rem 0.625rem;
-  font-size: 0.875rem;
-  color: #222222;
+  /*font-size: 0.875rem;*/
+  color: #333;
   text-align: left;
 }
 
@@ -6654,6 +6672,7 @@ table tr.even,table tr.alt,table tr:nth-of-type(even) {
 table thead tr th,table tfoot tr th,table tfoot tr td,table tbody tr th,table tbody tr td,table tr td {
   display: table-cell;
   line-height: 1.125rem;
+  padding-left: 30px;
 }
 
 .text-left {
@@ -6895,7 +6914,7 @@ h1,h2,h3,h4,h5,h6 {
   font-family: "Lato",sans-serif;
 /*  font-weight: normal;
   font-style: normal;
-*/  color: #222222;
+*/  color: #333;
   text-rendering: optimizeLegibility;
   margin-top: 0.2rem;
   margin-bottom: 0.5rem;
@@ -7045,7 +7064,7 @@ dl dd {
 abbr,acronym {
   text-transform: uppercase;
   font-size: 90%;
-  color: #222222;
+  color: #333;
   border-bottom: 1px dotted #dddddd;
   cursor: help;
 }
@@ -7150,7 +7169,7 @@ blockquote,blockquote p {
 .tabs dd>a,.tabs .tab-title>a {
   display: block;
   background-color: #efefef;
-  color: #222222;
+  color: #333;
   padding: 1rem 2rem;
   
   font-size: 1rem;
@@ -7162,7 +7181,7 @@ blockquote,blockquote p {
 
 .tabs dd.active a,.tabs .tab-title.active a {
   background-color: white;
-  color: #222222;
+  color: #333;
 }
 
 .tabs.radius dd:first-child a,.tabs.radius .tab:first-child a {
@@ -9536,7 +9555,7 @@ img.mfp-img {
     position: absolute;
     height: 100%;
     width: 469px;
-    right: 53%;
+    left: 5%;
   }
 
   #nav-image .lighthouse_image {
